TAG: qcreports_db-6-0-17-25
TAG: qcreports_db-6-0-17-24
TAG: qcreports_db-6-0-17-23
DATE: 12/20/2021, 12/21/2021
STAFF: lec
wts2-752/add all root section to GO Stats report/GO_stats.py
wts2-747/add resonsible person to Allele QC reports
wts2-746/discontinue selected 'Allele' and 'Strain' QC reports

remove:
ALL_NoMutantSentence.py
ALL_SequenceReference.sql
ALL_UncodedReference.py
ALL_NoPhenoRef.py
ALL_MCLAllele.sql
ALL_NoOrigRef.sql
GXD_OrphanGenotype.sql
WF_AP_Routed.py
BIB_StatusMismatch_AP.sql
PRB_StrainJAX8.sql

remove mmrrc piece only:
PRB_StrainJAX2.py
PRB_StrainJAX3.py

TAG: qcreports_db-6-0-17-22
DATE: 12/09/2021
STAFF: lec
wts2-739/add references = discard used in Annotations to existing MRK_BIB_Discard.py report
#       deleted:    mgd/MRK_BIB_Discard.py
#       new file:   mgd/MRK_BIB_Discard.sql

TAG: qcreports_db-6-0-17-21
DATE: 12/01/2021
STAFF: lec
wts2-735/WF_AP_Discard obsolete/removed

TAG: qcreports_db-6-0-17-20
DATE: 11/30/2021
STAFF: dbm
yaks-394/exclude recombinase reporter assays

TAG: qcreports_db-6-0-17-19
TAG: qcreports_db-6-0-17-18
TAG: qcreports_db-6-0-17-17
TAG: qcreports_db-6-0-17-16
TAG: qcreports_db-6-0-17-15
DATE: 10/29/2021
STAFF: sc
yaks-319 Cell Type QC Report - all CL terms with synonyms
new: mgd/GXD_CellType_Terms.py
tweaks:
    exclude obsolete
    include only exact synonyms
    change syn col hdr to ExactSynonyms

TAG: qcreports_db-6-0-17-14
DATE: 10/28/2021
STAFF: lec
wts2-556/Request for additional GO QC report: under-annotated genes  (TR13434)

TAG: qcreports_db-6-0-17-13
DATE: 10/8/2021
STAFF: dbm
wts2-675/changes to GXD_Images.py

TAG: qcreports_db-6-0-17-12
DATE: 10/7/2021
STAFF: dbm
wts2-682/added BIB_COVRefTagCounts.py and updated qcr.shtml

TAG: qcreports_db-6-0-17-11
DATE: 10/7/2021
STAFF: dbm
wts2-684/changes to GXD_Images.py, GXD_FullCode.py and qcr.shtml

TAG: qcreports_db-6-0-17-10
DATE: 06/21/2021
STAFF: lec
yaks-39/Identify curator contacts for all loads
qcr.shtml updates

TAG: qcreports_db-6-0-17-9