@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-17-26
+DATE: 12/27/2021
+STAFF: lec
+wts2-750/Allele report "Review for AP:NewAlleleNomenclature tag" not finding all relevant "routed" pdfs
+mgd/WF_AP_NewAlleleNomenTag.py
+
 TAG: qcreports_db-6-0-17-25
 TAG: qcreports_db-6-0-17-24
 TAG: qcreports_db-6-0-17-23
